--- a/ui-project-4/src/global.css
+++ b/ui-project-4/src/global.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 html,
 body {
+    box-sizing: border-box;
+    background: #2C303D;
+
     margin: 0;
     padding: 0;
 
@@ -11,4 +15,14 @@ body {
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+
+    height: 100%;
+    
+    overflow-y: auto;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
