ok sorry its on github now

--- a/ui-project-4/src/global.css
+++ b/ui-project-4/src/global.css
@@ -17,8 +17,11 @@ body {
     line-height: normal;
 
     height: 100%;
-    
-    overflow-y: auto;
+    overflow: hidden;
+}
+
+body.light-mode {
+    background: #ffffff;
 }
 
 *, *::before, *::after {
